# amper-vscode

./: .gitmodules  CHANGELOG.md  README.md  package-lock.json  package.json  webpack.config.js
.github/workflows/: release.yml
docs/: AMPER_CLI.md  DEPENDENCY_TREE_IMPLEMENTATION.md  PUBLISHING.md  ROADMAP.md  SCHEMA_EXTRACTION.md  SCHEMA_IMPLEMENTATION_SUMMARY.md  SCHEMA_QUICKSTART.md  VISUAL_CONFIG_EDITOR.md
schemas/: module-schema.json
src/: extension.ts
src/application/services/: DiagnosticService.ts  ProjectService.ts  TaskGraphService.ts  TaskService.ts
src/domain/entities/: AmperTemplate.ts
src/domain/interfaces/: IDeviceService.ts  IProcessExecutor.ts
src/domain/models/: AmperModule.ts  AmperProject.ts  AmperTask.ts  BuildDiagnostic.ts  JdkInfo.ts  TaskGraph.ts
src/domain/repositories/: IProjectRepository.ts  ITemplateRepository.ts
src/domain/utils/: AmperProgressParser.ts
src/infrastructure/adapters/: NodeProcessExecutor.ts
src/infrastructure/repositories/: FileSystemJdkRepository.ts  FileSystemProjectRepository.ts
src/infrastructure/services/: AdbDeviceService.ts  Logger.ts
src/presentation/: extension.ts
src/presentation/editors/: ModuleConfigEditorProvider.ts
src/presentation/providers/: AmperDependencyProvider.ts  AmperDeviceProvider.ts  AmperJdkProvider.ts  AmperProjectProvider.ts  AmperTaskProvider.ts  (+2 more)
src/test/: processExecutor.test.ts  taskService.test.ts
tools/schema-extractor/: .gitignore  Cargo.toml  README.md  build.ps1  build.sh  temp-test.json
tools/schema-extractor/src/: main.rs  parser.rs  schema.rs  types.rs
(+2 files in other folders)
