[package]
name = "amper-schema-extractor"
version = "0.1.0"
edition = "2024"
description = "Extracts JSON Schema from Amper Kotlin source files for VS Code extension"
authors = ["Amper VS Code Extension Contributors"]
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
walkdir = "2.5"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
indexmap = { version = "2.7", features = ["serde"] }

[[bin]]
name = "extract-schema"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
opt-level = "z"
